fixing webpage overflow

--- a/style.css
+++ b/style.css
@@ -7,10 +7,8 @@
   font-family: "Inter", sans-serif;
 }
 
-body, 
-html {
+html , body {
     overflow-x: hidden;
-    width: 100%;
 }
 
 a {
@@ -817,12 +815,6 @@ li {
 }
 
 @media (max-width: 640px) {
-    html , body {
-    overflow-x: hidden;
-    width: 100%;
-}
-
-
   #landing {
     padding: 0 32px;
   }
@@ -1159,12 +1151,6 @@ li {
 }
 
 @media (min-width: 641px) and (max-width: 1024px) {
-    html , body {
-        overflow-x: hidden;
-        width: 100%;
-    }
-
-
   #landing {
     padding: 0 32px;
   }
@@ -1331,12 +1317,6 @@ li {
 }
 
 @media (min-width: 1025px) and (max-width: 1200px) {
-    html , body {
-        overflow-x: hidden;
-        width: 100%;
-    }
-    
-
   h1 {
     font-size: 38px;
   }
